Fix some broken css

--- a/style.css
+++ b/style.css
@@ -8,27 +8,39 @@ body {
     background-color: black;
 }
 
-h1 {
+#headline {
+    padding: 20px;
+    margin: 20px;
     text-align: center;
     color: #fff;
 }
 
 h2 {
-    font-weight: bold;
+    padding: 10px;
+    margin: 10px;
     text-align: center;
+    font-weight: bold;
     color: #f00;
 }
 
-#rap {
-    color: #fff;
-    height: 100%;
-    width: 600px;
-    text-align: center;
-    border: 3px solid #aaa;
-    outline: 3px solid #f00;
-    padding: 5px;
+#main {
     display: flex;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#rap {
+    width: 600px;
+    color: #fff;
+    border: 5px solid #aaa;
+    outline: 5px solid #f00;
+    padding: 15px;
+    margin: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 #footer {
